fix(Header): add Home for mobile and better class names  and spacings

--- a/layouts/Header/NavButton/NavButton.module.scss
+++ b/layouts/Header/NavButton/NavButton.module.scss
@@ -22,7 +22,7 @@
 
     @media only screen and (max-width: 768px) {
       font-size: 20px;
-      padding: 1.25rem 0.5rem;
+      padding: 1rem 0.5rem;
     }
 
     font-weight: 300;
