--- a/pages/magazine/article/index.module.scss
+++ b/pages/magazine/article/index.module.scss
@@ -1,4 +1,4 @@
-.magazinearticle {
+.magazineArticle {
   background: #ffffff;
   min-height: 80vw;
   height: 100%;
